--- a/Player/treeDemo.html
+++ b/Player/treeDemo.html
@@ -27,6 +27,6 @@
   <a style="font-size: 24px; padding: 20px">Broadway.js - H.264 Decoding in JavaScript w/ asm.js</a>
   <br>
   <a style="font-size: 14px; padding: 20px">Click to Download and Play (The entire file is downloaded before playback begins. Once the file is cached, playback begins much faster.)</a><br><br>
-  <div class="broadway" src="tree.mp4" width="560" height="304" style="float: left; position: relative;" workers="false" render="true"></div>
+  <div class="broadway" src="tree.mp4" width="560" height="304" style="float: left; position: relative;" workers="false" render="true" webgl="auto"></div>
 </body>
 </html>
