--- a/treeDemo.html
+++ b/treeDemo.html
@@ -4,16 +4,13 @@
   <link type="text/css" href="jquery/theme/jquery-ui.css" rel="stylesheet" />
 </head>
 <body onload="load()">
-  <script src="sylvester.js" type="text/javascript"></script>
-  <script src="glUtils.js" type="text/javascript"></script>
+  <script type="text/javascript" src="Decoder.js"></script>
+  <script type="text/javascript" src="YUVWebGLCanvas.js"></script>
+  <script type="text/javascript" src="Player.js"></script>
   
-  <script type="text/javascript" src="util.js"></script>
   <script type="text/javascript" src="stream.js"></script>
-  <script type="text/javascript" src="worker.js"></script>
-  <script type="text/javascript" src="avc-codec.js"></script>
-  <script type="text/javascript" src="avc.js"></script>
+  
   <script type="text/javascript" src="mp4.js"></script>
-  <script src='canvas.js' type='text/javascript'></script>
   
   <script type="text/javascript">
     function load() {
@@ -25,32 +22,32 @@
     }
   </script>
   
-  <!-- <canvas id='canvas' width="640" height="100" style="background-color: #333333;"></canvas> -->
+  <!--  <canvas id='canvas' width="640" height="100" style="background-color: #333333;"></canvas>  -->
   <br>
   <a style="font-size: 24px; padding: 20px">Broadway.js - H.264 Decoding in JavaScript</a>
   <br>
   <table>
-    <tr><td>Main Thread Decoding</td><td>Worker Thread 1 Decoding</td><td>Worker Thread 2 Decoding</td></tr>
+    <tr><td>Main Thread Decoding</td><td>Worker Decoding</td><td>Worker Decoding</td></tr>
     <tr>
       <td>
-        <div class="broadway" src="tree.mp4" width="560" height="304" style="float: left; position: relative;" workers="false" render="true"></div>
+        <div class="broadway" src="tree.mp4" width="640" height="360" style="float: left; position: relative;" workers="false" render="true" webgl="auto"></div>
       </td>
       <td>  
-        <div class="broadway" src="tree.mp4" width="560" height="304" style="float: left; position: relative;" workers="true"></div>
+        <div class="broadway" src="tree.mp4" width="640" height="360" style="float: left; position: relative;" workers="true" webgl="auto"></div>
       </td>
       <td>  
-        <div class="broadway" src="tree.mp4" width="560" height="304" style="float: left; position: relative;" workers="true"></div>
+        <div class="broadway" src="tree.mp4" width="640" height="360" style="float: left; position: relative;" workers="true" webgl="auto"></div>
       </td>
     </tr>
     <tr>
       <td>
-        
+        <div class="broadway" src="tree.mp4" width="640" height="360" style="float: left; position: relative;" workers="false" render="true" webgl="false"></div>
       </td>
       <td>  
-        <div class="broadway" src="tree.mp4" width="560" height="304" style="float: left; position: relative;" workers="true"></div>
+        <div class="broadway" src="tree.mp4" width="640" height="360" style="float: left; position: relative;" workers="true" webgl="false"></div>
       </td>
       <td>  
-        <div class="broadway" src="tree.mp4" width="560" height="304" style="float: left; position: relative;" workers="true"></div>
+        <div class="broadway" src="tree.mp4" width="640" height="360" style="float: left; position: relative;" workers="true" webgl="false"></div>
       </td>
     </tr>
     <!--
@@ -69,3 +66,4 @@
   </table>  
 </body>
 </html>
+
