--- a/frame.html
+++ b/frame.html
@@ -1,10 +1,12 @@
 <html>
 	<head>
 		<script type='text/javascript'>
-			var worker = new worker("https://cdn.rawgit.com/sunnyworm/Broadway/umd/Player/Decoder.js")
-				window.onmessage = function(evt) {
-				worker.postMessage(evt);
-			}
+				this.player = new Player({
+					useWorker: true,
+					workerFile: "/lib/Broadway/Player/Decoder.js",
+					webgl: true,
+					size: info.resolution
+				});
 
 			worker.onmessage = function(evt) {
 				window.top.postMessage(evt, "*")
