--- a/frame.html
+++ b/frame.html
@@ -2,10 +2,10 @@
 	<head>
 		<script type='text/javascript'>
 				this.player = new Player(
-					"https://rawgit.com/sunnyworm/Broadway/umd/Player/Player.js",
+					"https://rawcdn.githack.com/sunnyworm/Broadway/ba9d6ec1f43fa452339bf8b14dd27af797f1424e/Player/Player.js",
 					{
 						useWorker: true,
-						workerFile: "https://rawgit.com/sunnyworm/Broadway/umd/Player/Decoder.js",
+						workerFile: "https://rawcdn.githack.com/sunnyworm/Broadway/ba9d6ec1f43fa452339bf8b14dd27af797f1424e/Player/Decoder.js",
 						webgl: true,
 						size: info.resolution
 					}
