--- a/proxy.html
+++ b/proxy.html
@@ -6,11 +6,11 @@
 		}
 
 		window.onload = function() {
-			    document.getElementById("ifr").contentWindow.postMessage("a message","https://cdn.rawgit.com/sunnyworm/Broadway/umd/")
+			    document.getElementById("ifr").contentWindow.postMessage("a message","https://rawcdn.githack.com/sunnyworm/Broadway/tree/umd")
 		}
 		</script>
 	</head>
 	<body>
-	    <iframe id="ifr" src="https://cdn.rawgit.com/sunnyworm/Broadway/umd/frame.html"></iframe>
+	    <iframe id="ifr" src="https://rawcdn.githack.com/sunnyworm/Broadway/d3ab9995894460ffae4f03a8aaa0003ce65cc787/frame.html"></iframe>
 	</body>
 </html>
